# AndroidStabilityLab

./: .gitignore  README-CN.md  README.md  check_env.py  main.py  pyproject.toml  pyrightconfig.json  requirements-desktop.txt  requirements-dev.txt  requirements.txt  ruff.toml
config/: database.json  monitoring.json  performance_risk_thresholds.json  platform.json  rule_replay_golden_samples.json  rule_review_baseline_policy.json  rule_review_policy.json  stability_rules.json
core/: __init__.py  adb_collector.py  config_manager.py  data_manager.py  optimized_config.py  performance_monitor.py
data/: android_metrics.db  android_metrics.db-shm
database/: connection.py  data_storage.py  maintenance.py  models.py  operations.py  stability_models.py
docs/: Android Stability Lab平台使用说明.md  Android Stability Lab未完成功能验收清单.md  项目文件说明.md
gui/: apk_manager.py  app_selector.py  chart_config.py  chart_widgets.py  device_connection.py  modern_app_selector.py  modern_main_window.py  monitor_view.py
runtime.example/: README.md
scripts/: build_desktop_app.ps1  build_desktop_app.sh  generate_app_icons.py  mock_im_receiver.py  verify_cli_query_smoke.sh  verify_cold_start_loop_midrun_disconnect_smoke.sh  verify_cold_start_loop_multi_device_smoke.sh  verify_cold_start_loop_smoke.sh  verify_extended_artifacts_smoke.sh  verify_foreground_background_loop_smoke.sh  verify_im_notify_link_smoke.sh  verify_install_uninstall_loop_smoke.sh  verify_monkey_midrun_disconnect_smoke.sh  verify_monkey_smoke.sh  verify_real_device_long_run_smoke.sh  verify_reboot_loop_smoke.sh  (+7 more)
tests/: README.md  (+66 more)
(+638 files in other folders)
